Renamed routes, added statistics.

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<script defer src="https://umami.erlenddahl.no/script.js" data-website-id="fb744dbb-d228-4416-a46b-279f74be5a41"></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
