Added page title.

--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<title>Stratagem Picker</title>
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<script defer src="https://umami.erlenddahl.no/script.js" data-website-id="fb744dbb-d228-4416-a46b-279f74be5a41"></script>
